examples/test/testpolicy5667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5667
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key25: value18
      key18: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value8
      podSelector:
        matchLabels:
          key9: value35
          key39: value22
